Fixed alignment of page title and footer

--- a/styles/global.css
+++ b/styles/global.css
@@ -67,6 +67,11 @@ body
 #footerDiv
 {
     padding: 10px;
+    text-align: center;
+}
+.pageLogoAndTitle
+{
+    text-align: center;
 }
 
 .mainSeparator
